2023-07-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* fuzzing/oss-fuzz-build.sh: Fix typo which breaks oss-fuzz build.

	* coders/jxl.c (WriteJXLImage): Port forward to latest development
	0.9.0 API, which removes unused pixel_format from
	JxlDecoderGetColorAsEncodedProfile(),
	JxlDecoderGetICCProfileSize(), JxlDecoderGetColorAsICCProfile()
	and silently drops JXL_ENC_NOT_SUPPORTED.

2023-07-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* fuzzing/oss-fuzz-build.sh: Add --disable-ifunc to xz build
	options to avoid segmentation violation, matching options
	successfully used by ImageMagick's oss-fuzz build.

2023-07-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/attribute.c: In GetImageClippingPathAttribute(), check
	for the presence of the clipping path name (ID=2999). If that's
	found, it searches for a path with that name. Otherwise, it
	returns NULL.  Based (in spirit) on SourceForge #62 "Fix for
	GetImageClippingPathAttribute".

	* configure.ac (LIB_HEIF): SourceForge patch #71 "Use pkg-config
	for libheif in configure".

	* TclMagick/{configure.ac, generic/Makefile.am,
	generic/pkgIndex.tcl.in, pkgIndex.tcl}: SourceForge patch #74
	"TclMagick: generate generic/pkgIndex.tcl automatically and change
	pkgIndex.tcl".

	* TclMagick/generic/Makefile.am: SourceForge patch #73 "TclMagick:
	remove lib prefix from library files".

	* TclMagick/unix/m4/tcl.m4: SourceForge patch #72 "TclMagick: fix
	install for unix".

2023-06-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/magick.c: Add some documentation regarding OpenMP.

	* coders/tga.c (LogTGAInfo): Avoid compiler warning about
	orientation possibly being undefined.  Update source code to
	conform to common style.

	* fuzzing/oss-fuzz-build.sh: Produce more build information in
	fuzzing build.

2023-06-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac, coders/Makefile.am: Jasper is now optionally
	dependent on libheif.
