@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020230708"
-#define public MagickPackageReleaseDate "snapshot-20230708"
+#define public MagickPackageVersionAddendum ".020230720"
+#define public MagickPackageReleaseDate "snapshot-20230720"
